--- a/estudiante-service/src/main/resources/application.properties
+++ b/estudiante-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=estudiante-service
+spring.datasource.url=jdbc:mysql://mysql-db:3306/microservicios_db
+spring.datasource.username=user
+spring.datasource.password=pass
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.port=8081
