--- a/evaluacion-service/Dockerfile
+++ b/evaluacion-service/Dockerfile
@@ -10,4 +10,4 @@ WORKDIR /app
 COPY --from=build /app/target/evaluacion-service-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar","app.jar"]
+ENTRYPOINT ["java","-jar","app-evaluacion.jar"]
