--- a/estudiante-service/Dockerfile
+++ b/estudiante-service/Dockerfile
@@ -10,4 +10,4 @@ WORKDIR /app
 COPY --from=build /app/target/estudiante-service-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app-estudiante.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
