--- a/evaluacion-service/Dockerfile
+++ b/evaluacion-service/Dockerfile
@@ -7,7 +7,7 @@ RUN mvn clean package -DskipTests
 # Etapa 2: Ejecutar la app
 FROM eclipse-temurin:17
 WORKDIR /app
-COPY --from=build /app/target/evaluacion-service-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/evaluacion.jar app.jar
 
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app-evaluacion.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
